ET-17 add endpoint for refreshing a token
