# src/main/resources/api/api.yml
@@ -52,7 +52,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/loginResponse'
+                                $ref: '#/components/schemas/authenticationResponse'
                 '400':
                     description: "Bad request"
                 '500':
@@ -64,8 +64,8 @@ paths:
         post:
             tags:
                 - "auth"
-            summary: "Logging out"
-            description: "Logging out"
+            summary: "Log out"
+            description: "Log out"
             operationId: "logOut"
             requestBody:
                 required: true
@@ -80,6 +80,33 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/refreshTokenPayload'
+                '400':
+                    description: "Bad request"
+                '500':
+                    description: "Internal server error"
+                '503':
+                    description: "Database connection failed"
+
+    /auth/refresh-token:
+        post:
+            tags:
+                - "auth"
+            summary: "Refresh a token"
+            description: "Refresh a token"
+            operationId: "refreshToken"
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/refreshTokenPayload'
+            responses:
+                '201':
+                    description: 'Operation successful'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/authenticationResponse'
                 '400':
                     description: "Bad request"
                 '500':
@@ -158,7 +185,7 @@ components:
                 - email
                 - password
 
-        loginResponse:
+        authenticationResponse:
             type: object
             properties:
                 authToken:
